# GravitySimulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  input  main.cpp  myinput  outputfile0.vtu  outputfile1.vtu  outputfile10.vtu  outputfile100.vtu  outputfile1000.vtu  outputfile101.vtu  outputfile102.vtu  outputfile103.vtu  outputfile104.vtu  outputfile105.vtu  outputfile106.vtu  outputfile107.vtu  outputfile108.vtu  outputfile109.vtu  outputfile11.vtu  outputfile110.vtu  outputfile111.vtu  outputfile112.vtu  outputfile113.vtu  outputfile114.vtu  outputfile115.vtu  outputfile116.vtu  outputfile117.vtu  outputfile118.vtu  outputfile119.vtu  outputfile12.vtu  outputfile120.vtu  outputfile121.vtu  outputfile122.vtu  outputfile123.vtu  outputfile124.vtu  outputfile125.vtu  outputfile126.vtu  (+968 more)
examples/: figure-eight.in  quasigalaxies.in  two-body.in
include/: AbstractUniverse.h  BHUniverse.h  BarnesHutUniverse.h  Body.h  Constants.h  HTUniverse.h  HermitBody.h  HermitUniverse.h  LinearTimeUniverse.h  NeighbourSchemeUniverse.h  OctTree.h  SimpleUniverse.h  Simulator.h  scalar.h  utilities.h  vector.h
src/: AbstractUniverse.cpp  BHUniverse.cpp  BarnesHutUniverse.cpp  Body.cpp  HTUniverse.cpp  HermitBody.cpp  HermitUniverse.cpp  LinearTimeUniverse.cpp  NeighbourSchemeUniverse.cpp  OctTree.cpp  SimpleUniverse.cpp  Simulator.cpp  utilities.cpp  vector.cpp
